--- a/nuitka/codegen/templates/CodeTemplateCallsPositional.j2
+++ b/nuitka/codegen/templates/CodeTemplateCallsPositional.j2
@@ -52,11 +52,8 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
             result = function->m_c_code(function, {% if args_count != 0 %} (PyObject **)args {% else %} NULL {% endif %});
         } else if (function->m_args_simple && {{args_count}} + function->m_defaults_given == function->m_args_positional_count) {
 {% if args_count != 0 %}
-#ifdef _MSC_VER
-            PyObject **python_pars = (PyObject **)_alloca(sizeof(PyObject *) * function->m_args_positional_count);
-#else
-            PyObject *python_pars[function->m_args_positional_count];
-#endif
+            NUITKA_DYNAMIC_ARRAY_DECL(python_pars, PyObject *, function->m_args_positional_count);
+
             memcpy(python_pars, args, {{args_count}} * sizeof(PyObject *));
             memcpy(python_pars + {{args_count}}, &PyTuple_GET_ITEM(function->m_defaults, 0), function->m_defaults_given * sizeof(PyObject *));
 {% else %}
@@ -134,11 +131,8 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
 {% endif %}
                 result = function->m_c_code(function, python_pars);
             } else if (function->m_args_simple && {{args_count}} + 1 + function->m_defaults_given == function->m_args_positional_count) {
-#ifdef _MSC_VER
-                PyObject **python_pars = (PyObject **)_alloca(sizeof(PyObject *) * function->m_args_positional_count);
-#else
-                PyObject *python_pars[function->m_args_positional_count];
-#endif
+                NUITKA_DYNAMIC_ARRAY_DECL(python_pars, PyObject *, function->m_args_positional_count);
+
                 python_pars[0] = method->m_object;
                 Py_INCREF(method->m_object);
 
