Optimization: Added support for "dict.has_key"
* This is of course Python2 only, and there is old code still using it.

* The dictionary "in" node was made reusable to make this easy, just
  different evaluation order.

* Generation of nodes wasn't prepared for argument count specific functions yet.

* Add coverage of unhashable values at runtime and compile time to dict
  methods test.

--- a/nuitka/tools/specialize/templates_python/AttributeNodeFixed.py.j2
+++ b/nuitka/tools/specialize/templates_python/AttributeNodeFixed.py.j2
@@ -122,7 +122,7 @@ class ExpressionAttributeLookupDict{{attribute_name_class}}(SideEffectsFromChild
             from .DictionaryNodes import ExpressionDictOperation{{attribute_name_class}}
 
             return ExpressionDictOperation{{attribute_name_class}}(
-                dict_arg=self.subnode_expression, source_ref=source_ref
+                dict_arg=self.subnode_expression {{formatCallArgs(dict_operation_args, starting=False)}}, source_ref=source_ref
             )
 {% endif %}
 {% endif %}
