--- a/nuitka/tools/specialize/templates_python/AttributeNodeFixed.py.j2
+++ b/nuitka/tools/specialize/templates_python/AttributeNodeFixed.py.j2
@@ -22,7 +22,7 @@
 {% set dict_operation_version_presence = attribute_shape_operations.get((attribute_name, "tshape_dict")) %}
 {% set dict_operation_args = attribute_shape_args.get((attribute_name, "tshape_dict")) %}
 {% set dict_operation_variation = attribute_shape_variations.get((attribute_name, "tshape_dict")) %}
-
+{% set dict_operation_node_arg_mapping = attribute_shape_node_arg_mapping.get((attribute_name, "tshape_dict")) %}
 {% else %}
 {% set dict_shape = 0 %}
 {% endif %}
@@ -108,21 +108,21 @@ class ExpressionAttributeLookupDict{{attribute_name_class}}(SideEffectsFromChild
                 from .DictionaryNodes import ExpressionDictOperation{{attribute_name_class}}{{count+1}}
 
                 return ExpressionDictOperation{{attribute_name_class}}{{count+1}}(
-                    dict_arg=self.subnode_expression, {{formatCallArgs(dict_operation_args[:count])}}, source_ref=source_ref
+                    dict_arg=self.subnode_expression, {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args[:count])}}, source_ref=source_ref
                 )
 {% endfor %}
             else:
                 from .DictionaryNodes import ExpressionDictOperation{{attribute_name_class}}{{dict_operation_variation[0]+1}}
 
                 return ExpressionDictOperation{{attribute_name_class}}{{dict_operation_variation[0]+1}}(
-                    dict_arg=self.subnode_expression, {{formatCallArgs(dict_operation_args[:dict_operation_variation[0]])}}, source_ref=source_ref
+                    dict_arg=self.subnode_expression, {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args[:dict_operation_variation[0]])}}, source_ref=source_ref
                 )
 
 {% else %}
             from .DictionaryNodes import ExpressionDictOperation{{attribute_name_class}}
 
             return ExpressionDictOperation{{attribute_name_class}}(
-                dict_arg=self.subnode_expression {{formatCallArgs(dict_operation_args, starting=False)}}, source_ref=source_ref
+                dict_arg=self.subnode_expression {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args, starting=False)}}, source_ref=source_ref
             )
 {% endif %}
 {% endif %}
