--- a/nuitka/codegen/templates_c/CodeTemplateCallsPositionalMethodDescr.c.j2
+++ b/nuitka/codegen/templates_c/CodeTemplateCallsPositionalMethodDescr.c.j2
@@ -43,19 +43,19 @@ PyObject *CALL_METHODDESCR_WITH_ARGS{{args_count}}(PyObject *called, PyObject *c
     // Try to be fast about wrapping the arguments.
     int flags = method_def->ml_flags & ~(METH_CLASS | METH_STATIC | METH_COEXIST);
 
-    if ({{ unlikely_or_likely_from(args_count != 0) }}(flags & METH_NOARGS)) {
-        SET_CURRENT_EXCEPTION_TYPE0_FORMAT1(
-            PyExc_TypeError,
-            "%s() takes no arguments ({{args_count}} given)",
-            method_def->ml_name
-        );
-        return NULL;
-    } else if ({{ unlikely_if(args_count != 1) }}(flags & METH_O)) {
-{% if args_count == 1 %}
+    if ({{ unlikely_or_likely_from(args_count != 1) }}(flags & METH_NOARGS)) {
         PyCFunction method = method_def->ml_meth;
         PyObject *self = args[0];
 
         PyObject *result = (*method)(self, NULL);
+
+        return Nuitka_CheckFunctionResult(result);
+    } else if ({{ unlikely_if(args_count != 1) }}(flags & METH_O)) {
+{% if args_count == 2 %}
+        PyCFunction method = method_def->ml_meth;
+        PyObject *self = args[0];
+
+        PyObject *result = (*method)(self, args[1]);
 
         return Nuitka_CheckFunctionResult(result);
 {% else %}
