--- a/nuitka/codegen/templates_c/HelperImportHard.c.j2
+++ b/nuitka/codegen/templates_c/HelperImportHard.c.j2
@@ -23,11 +23,15 @@
     }
 
     if (unlikely(module_{{module_code_name.lower()}} == NULL)) {
+{% if is_stdlib %}
 #ifndef __NUITKA_NO_ASSERT__
         PyErr_PrintEx(0);
 #endif
         NUITKA_CANNOT_GET_HERE("failed hard import of '{{module_name}}'");
         abort();
+{% else %}
+        return NULL;
+{% endif %}
     }
 
     return module_{{module_code_name.lower()}};
